[package]
name = "cuda-codec"
version = "0.1.0"
edition = "2021"
description = "Varint, LEB128, and framed message encoding"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lucineer/cuda-codec"
readme = "README.md"
keywords = ["ai", "fleet", "agent", "rust"]
categories = ["science"]

[dependencies]
serde = { version = "1", features = ["derive"] }

